# srp

./: README.md
openssl_srp/: CMakeLists.txt
openssl_srp/build.android/jni/: Android.mk  Application.mk
openssl_srp/src/: CMakeLists.txt
openssl_srp/src/Tiny/: CMakeLists.txt
openssl_srp/src/Tiny/Base/: tiny_api.h  tiny_ret.h  tiny_time.h
openssl_srp/src/Tiny/Container/: TinyList.c  TinyList.h  TinyMap.c  TinyMap.h  TinyQueue.c  TinyQueue.h
openssl_srp/src/Tiny/Log/: tiny_log.h  tiny_log_print.c  tiny_log_print.h
openssl_srp/src/Tiny/Memory/: tiny_memory.c  tiny_memory.h
openssl_srp/src/Tiny/Memory/test/: CMakeLists.txt  test.c
openssl_srp/src/srp/: CMakeLists.txt  SrpClient.c  SrpClient.h  SrpCommon.c  SrpCommon.h  SrpServer.c  SrpServer.h  com_ouyang_srp_SrpClient.c  com_ouyang_srp_SrpClient.h  com_ouyang_srp_SrpServer.c  com_ouyang_srp_SrpServer.h  srp_api.h  test.c
openssl_srp/src/test/: CMakeLists.txt  srptest.c
openssl_srp/src/tiny_base/: CMakeLists.txt  tiny_base.h  tiny_ret.c  tiny_time.c  tiny_typedef.h
openssl_srp_ndk/build.android/jni/: Android.mk
